tests/paczka1/fuzzy1/15248910.err
Error in line 1: zHrgOGVLZ S487 86,7
Error in line 7: 7yzutz S855 10,0
Error in line 8: zHrgOGVLZ S169 93,1
Error in line 16: zHrgOGVLZ S855 16,9
Error in line 17: S169 S169 33,0
Error in line 26: 3j6Qf5NxOb S487 90,8
Error in line 29: DZvIpkI S855 190,C
Error in line 28: 3j6Qf5NxOb A453 28,9
Error in line 34: S169 S169 98,8
